Fixed blog thumbnail image sizing on mobile

--- a/blog/src/themes/main.scss
+++ b/blog/src/themes/main.scss
@@ -284,11 +284,18 @@ ol li {
     .post-link {
         width: 100%;
         max-width: 320px;
+
+        @media (max-width: 425px) {
+            max-width: 100%;
+        }
         .blog-list-item--container1 {
             display: flex;
             flex-basis: 33%;
             flex-direction: column;
             max-width: 320px;
+            @media (max-width: 425px) {
+                max-width: 100%;
+            }
 
             .gatsby-image-wrapper {
                 height: 180px;
